rendered/envs/demo/victoria-logs-single/middleware-auth-logs.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    coroot.com/custom-application-name: victoria-logs-single
  name: auth-logs
spec:
  basicAuth:
    secret: auth-logs
