rendered/envs/demo/victoria-logs-single/statefulset-victoria-logs-single-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app: server
    app.kubernetes.io/instance: victoria-logs-single
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-logs-single
    app.kubernetes.io/version: v1.6.1-victorialogs
    helm.sh/chart: victoria-logs-single-0.8.15
  name: victoria-logs-single-server
  namespace: victoria-logs-single
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: server
      app.kubernetes.io/instance: victoria-logs-single
      app.kubernetes.io/name: victoria-logs-single
  serviceName: victoria-logs-single-server
  template:
    metadata:
      labels:
        app: server
        app.kubernetes.io/instance: victoria-logs-single
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoria-logs-single
    spec:
      containers:
        - args:
            - --envflag.enable
            - --envflag.prefix=VM_
            - --httpListenAddr=:9428
            - --loggerFormat=json
            - --retentionPeriod=1
            - --storageDataPath=/storage
          image: victoriametrics/victoria-logs:v1.6.1-victorialogs
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: http
            timeoutSeconds: 5
          name: vlogs
          ports:
            - containerPort: 9428
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /storage
              name: server-volume
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 60
      volumes: null
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: server-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 30Gi
