rendered/envs/demo/victoria-logs-single/service-victoria-logs-single-fluent-bit.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: victoria-logs-single
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/version: 3.1.9
    helm.sh/chart: fluent-bit-0.47.10
  name: victoria-logs-single-fluent-bit
  namespace: victoria-logs-single
spec:
  ports:
    - name: http
      port: 2020
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: victoria-logs-single
    app.kubernetes.io/name: fluent-bit
  type: ClusterIP
