rendered/envs/demo/victoria-logs-single/service-victoria-logs-single-server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app: server
    app.kubernetes.io/instance: victoria-logs-single
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-logs-single
    app.kubernetes.io/version: v1.8.0-victorialogs
    helm.sh/chart: victoria-logs-single-0.8.16
  name: victoria-logs-single-server
  namespace: victoria-logs-single
spec:
  clusterIP: None
  ports:
    - name: http
      port: 9428
      protocol: TCP
      targetPort: http
  selector:
    app: server
    app.kubernetes.io/instance: victoria-logs-single
    app.kubernetes.io/name: victoria-logs-single
  type: ClusterIP
