rendered/envs/demo/victoria-logs-single/ingressroute-logs.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: logs
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`logs.demo.budd.ee`)
      middlewares:
        - name: auth-logs
      priority: 10
      services:
        - name: victoria-logs-single-server
          port: 9428
